# Post-Traitement

./: CMakeLists.txt  main.cpp
core/: functions.cpp  general.cpp  optimizedTxtFile.cpp  rawFile.cpp
headers/: Point.h  View.h  functions.h  general.h  optimizedTxtFile.h  rawFile.h
model/: ArrayPoint.cpp  ArrayPoint.h  Point.cpp  View.cpp
